--- a/public/sites/all/themes/custom/runriot_zen/css/rroverride.css
+++ b/public/sites/all/themes/custom/runriot_zen/css/rroverride.css
@@ -94,3 +94,27 @@ left: 27%;
   padding-left: 35px;
   cursor: pointer;
 }
+
+.field-collection-container {
+  border:0;
+}
+
+ul.primary {
+border:0;
+background-color:#fff2ed;
+height: auto;
+line-height: normal;
+list-style: none;
+margin: 0px;
+padding: 0 0 0 1em;
+white-space: nowrap;
+}
+ul.primary li {
+padding: 0;
+margin: 0 5px;
+background-color:#023059;
+padding:5px 10px 10px 10px;
+}
+ul.primary li {
+display: inline;
+}
